...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="110dp"
        android:layout_marginTop="180dp"
        android:fontFamily="serif"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="110dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/light_purple"
...
