...
        android:textSize="14sp"
        android:text="Sat, Oct 22 - 6:00 PM"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/custom_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_event_date"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="10dp"
        android:height="40dp"
...
