<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ProfileFragment"
    android:background="@drawable/pink_background"
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent" android:layout_height="fill_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/custom_event_info_view"
            android:layout_width="300dp"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="2dp"
                android:width="300dp"
                android:height="25dp"
                tools:srcCompat="@tools:sample/avatars[8]" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:height="20dp"
                android:fontFamily="serif"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:height="20dp"
                android:fontFamily="serif"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_birthday"
                android:layout_gravity="center"
                android:width="70dp"
                android:height="10dp"
                android:backgroundTint="@color/light_purple"
                android:fontFamily="serif"
                android:text="Logout"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:height="20dp"
                android:fontFamily="serif"
                android:text="Registered Events:"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:id="@+id/show_registered"
                android:textStyle="bold" />

            <Button
                android:id="@+id/scroll_button"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_birthday"
                android:layout_gravity="center"
                android:width="70dp"
                android:height="10dp"
                android:backgroundTint="@color/light_purple"
                android:fontFamily="serif"
                android:text="Scroll down"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginBottom="100dp"
                />


        </GridLayout>

        <!--   date picker     -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/search_view_background"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_event_info_view"
            app:queryHint="Search Here ..." />

        <TextView
            android:id="@+id/date_from"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:text="Date from: "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/dateFromPickerButton"
            style="?android:spinnerStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="1/1/2020"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="225dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"

            />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginEnd="332dp"
            android:text="Date to: "
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_from" />

        <!--   type display    -->

        <Button
            android:id="@+id/dateToPickerButton"
            style="?android:spinnerStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="12/25/2024"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="225dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_from" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="Type: "
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="135dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"/>

        <!--   sort display    -->
        <TextView
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:text="Sort by: "
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_spinner"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_width="135dp"
            android:layout_height="25dp"
            android:layout_below="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_spinner" />

        <!--   user image     -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateToPickerButton"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>